--- a/src/sass/layout/l-result.scss
+++ b/src/sass/layout/l-result.scss
@@ -9,6 +9,7 @@
             color: var.$result-title;
             font-size: 20px;
             margin: 43px auto 20px auto;
+            font-weight: bold;
         }
     }
 
