--- a/src/sass/layout/l-question.scss
+++ b/src/sass/layout/l-question.scss
@@ -1,36 +1,37 @@
 @use "../foundation/variable.scss" as var;
 @use "../foundation/mixin.scss" as mix;
 
-@include mix.sp {
-    .question_contents {
-        display: none;
-    }
 
-    .is-active {
-        display: block;
-    }
+.question_contents {
+    display: none;
+}
 
-    .question_title {
-        font-size: 20px;
-        color: #88CFEA;
-        text-align: center;
-        margin: 43px auto 20px auto;
-        font-weight: 600;
-    }
+.is-active {
+    display: block;
+}
 
-    .question_txt {
-        margin: 0 auto;
-        width: 90%;
-        background-color: var.$question-bgColor;
-        padding: 10px;
-        text-align: center;
-    }
+.question_title {
+    font-size: 20px;
+    color: #88CFEA;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 600;
+}
 
-    .question_btns {
-        margin-top: 30px
-    }
+.question_txt {
+    margin: 0 auto;
+    width: 90%;
+    background-color: var.$question-bgColor;
+    padding: 10px;
+    text-align: center;
+}
 
-    .question_btn:not(:first-of-type) {
-        margin-top: 20px;
-    }
+.question_btns {
+    margin-top: 30px
+}
+
+.question_btn:not(:first-of-type) {
+    margin-top: 20px;
 }
