--- a/css/layout/l-footer.css
+++ b/css/layout/l-footer.css
@@ -4,7 +4,6 @@ footer {
 }
 footer svg {
   position: relative;
-  z-index: -1;
 }
 
 .footer_link {
@@ -18,7 +17,7 @@ footer svg {
 }
 
 .footer_link--home {
-  left: 45px;
+  left: 40px;
 }
 
 .footer_link--insta {
@@ -36,7 +35,8 @@ footer svg {
   font-size: 35px;
   display: block !important;
   text-align: center;
-  padding-top: 6px;
+  padding-top: 7px;
+  margin-left: -1px;
 }
 
 .fa-instagram {
