--- a/css/layout/l-top.css
+++ b/css/layout/l-top.css
@@ -1,17 +1,21 @@
-@media screen and (max-width: 375px) {
-  body {
-    width: 100%;
-  }
-  .header_img {
-    width: 100%;
-  }
-  .header_appeal-txt {
-    margin: 20px auto 0 auto;
-    text-align: center;
-  }
-  .header_appeal-txt p {
-    line-height: 30px;
-  }
+body {
+  max-width: 375px;
+  width: 100%;
+  margin: 0 auto;
+  background-color: #fff;
+  height: 100vh;
+}
+
+.header_img {
+  width: 100%;
+}
+
+.header_appeal-txt {
+  margin: 20px auto 0 auto;
+  text-align: center;
+}
+.header_appeal-txt p {
+  line-height: 30px;
 }
 
 /*# sourceMappingURL=l-top.css.map */
