--- a/src/sass/foundation/base.scss
+++ b/src/sass/foundation/base.scss
@@ -11,6 +11,10 @@ body {
     cursor: default;
     width: 100%;
     font-size: 16px;
+    max-width: 375px;
+    margin: 0 auto;
+    background-color: var.$base-color;
+    height: 100vh;
 }
 
 #wrapper {
