--- a/css/foundation/base.css
+++ b/css/foundation/base.css
@@ -8,6 +8,10 @@ body {
   cursor: default;
   width: 100%;
   font-size: 16px;
+  max-width: 375px;
+  margin: 0 auto;
+  background-color: #fff;
+  height: 100vh;
 }
 
 #wrapper {
