--- a/src/sass/layout/l-footer.scss
+++ b/src/sass/layout/l-footer.scss
@@ -3,7 +3,8 @@
 
 footer {
     margin-top: 50px;
-    position: relative;
+    position: absolute;
+    bottom: 0;
 
     svg {
         position: relative;
