--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,8 @@ body {
 
 footer {
   margin-top: 50px;
-  position: relative;
+  position: absolute;
+  bottom: 0;
 }
 footer svg {
   position: relative;
