--- a/src/sass/layout/l-footer.scss
+++ b/src/sass/layout/l-footer.scss
@@ -3,8 +3,7 @@
 
 footer {
     margin-top: 50px;
-    position: absolute;
-    bottom: 0;
+    position: relative;
 
     svg {
         position: relative;
