--- a/css/style.css
+++ b/css/style.css
@@ -462,8 +462,7 @@ body {
 
 footer {
   margin-top: 50px;
-  position: absolute;
-  bottom: 0;
+  position: relative;
 }
 footer svg {
   position: relative;
